:heavy_plus_sign: use fixed Spacing

--- a/css/Fluid/src/settings/design/_space.scss
+++ b/css/Fluid/src/settings/design/_space.scss
@@ -5,7 +5,7 @@
 //
 // Setting
 //
-$space-typography:               .5em !default; // Default Space for typography
+$space-typography: 0.5em !default; // Default Space for typography
 
 // Default Sizes of spaces
 $space-sizes: (
@@ -16,4 +16,6 @@ $space-sizes: (
   6: 6%,
   8: 8%,
   10: 10%,
+  1rem: 1rem,
+  7px: 7px,
 ) !default;
